--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>imgupload.js</title>
-	<link rel="stylesheet" href="src/imgupload.css">
+	<link rel="stylesheet" href="imgupload.css">
 </head>
 <body style="padding:50px;">
 	
 	<input type="file" data-name="upload1" class="j-imgupload">
 	<input type="file" data-name="upload2" class="j-imgupload">
-
+	
 	<input type="hidden" id="j-imguploadUrl" value="/imgupload/upload.php">
 
 	<script src="sea.js" id="seajsnode"></script>
 	<script>
-	seajs.use('src/imgupload.js')
+	seajs.use('imgupload.js')
 	</script>
 </body>
 </html>
