--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 	
 	<input type="hidden" id="j-imguploadUrl" value="/imgupload/upload.php">
 
-	<script src="sea.js" id="seajsnode"></script>
-	<script>
-	seajs.use('imgupload.js')
-	</script>
+	<script src="imgupload.js"></script>
 </body>
 </html>
