--- a/index.html
+++ b/index.html
@@ -4,14 +4,36 @@
 	<meta charset="UTF-8">
 	<title>imgupload.js</title>
 	<link rel="stylesheet" href="imgupload.css">
+	<style>
+	body{padding: 50px;}
+	.pdt20{padding-top: 20px;}
+	</style>
 </head>
-<body style="padding:50px;">
+<body>
+
+	<section>
+		<input type="file" data-name="upload1" multiple id="j-upload1">
+		<button id="btn-get1">获取已上传图片路径</button>
+		<p></p>
+	</section>
 	
-	<input type="file" data-name="upload1" class="j-imgupload">
-	<input type="file" data-name="upload2" class="j-imgupload">
+	<!-- <section class="pdt20">
+		<input type="file" data-name="upload2" id="j-upload2">
+	</section> -->
 	
-	<input type="hidden" id="j-imguploadUrl" value="/imgupload/upload.php">
+	<!-- 上传路径埋点 -->
+	<!-- <input type="hidden" id="j-imguploadUrl" value="/imgupload/upload.php"> -->
 
 	<script src="imgupload.js"></script>
+	<script>
+	var ip_upload1=document.querySelector("#j-upload1"),
+		uri="/imgupload/upload.php";
+
+	var upload1=new ImgUpload(ip_upload1,uri);
+
+	document.querySelector("#btn-get1").addEventListener("click",function(){
+		this.nextElementSibling.innerHTML=upload1.getURLs().join(",");
+	},false);
+	</script>
 </body>
 </html>
