1.修复bug： 	a.无法重复选择同一张图片 	b.后台接收对象名称修正 	c.缩略图路径与dataset值做区分 2.新增功能：限制上传文件数量及智能提示

--- a/README.html
+++ b/README.html
@@ -1092,6 +1092,15 @@ var upload1=new ImgUpload({
 &lt;/script&gt;
 </code></pre>
 
+<h4 id="optionsuploadlimit"><a name="user-content-optionsuploadlimit" href="#optionsuploadlimit" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>options.uploadLimit</h4>
+<p>限制上传文件数量，默认为999。</p>
+<pre><code class="js">&lt;script&gt;
+var upload1=new ImgUpload({
+    uploadLimit:1
+});
+&lt;/script&gt;
+</code></pre>
+
 <h3 id="_6"><a name="user-content-_6" href="#_6" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>提供的方法</h3>
 <h4 id="geturls"><a name="user-content-geturls" href="#geturls" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>getURLs()</h4>
 <p>获取所有已上传图片路径</p>
