--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<section>
 		<h1>方法一：自动实例化</h1>
-		<input type="file" data-name="upload2" data-fileTypeExts="*.png|*.jpg" data-imgSizeExts="320*640" class="j-imgupload"> 
+		<input type="file" data-name="upload2" data-fileTypeExts="*.png|*.jpg|*.jpeg" data-imgSizeExts="100*" data-uploadLimit="1" class="j-imgupload"> 
 		<p>请上传320*640的图片</p>
 		<input type="hidden" id="j-imguploadUrl" value="/imgupload/upload.php"><!-- 上传接口埋点 -->
 	</section>
